Fix collapsed navbar issue Fixes #15

--- a/style.css
+++ b/style.css
@@ -55,9 +55,25 @@ html,body {
     background-color: white;
 }
 
+
 .navbar-collapse .navbar-nav .nav-item {
     color: black;
+    font-size: 18px;
+    font-weight: 600;
+    height: 58px;
+    padding-top: 1em;
+    min-width: 510px;
+    margin-left: 15px;
+    margin-right: 15%;
+
 }
+
+.navbar-collapse .navbar-nav .nav-item:hover {
+    color: white;
+    background: linear-gradient(black, #0071BC);
+
+}
+
 
 .navbar-brand {
     width: 50%;
@@ -230,18 +246,17 @@ picture {
 .contact {
     min-height: 200px;
     min-width: 100%;
-    background-color: #0071BC;
     background-color: black;
     color: white;
     margin: 0px;
     margin-top: 30px;
     padding: 0px;
+
 }
 
 .footer {
     padding: 0px;
     margin: 0px;
-
 
 }
 
@@ -270,6 +285,19 @@ picture {
 .display-4 {
     padding-top: 0px;
 }
+
+    .navbar-collapse .navbar-nav .nav-item {
+    min-width: 690px;
+
+
+}
+}
+
+@media only screen and (min-width: 990px) {
+    .nav-item {
+        margin-right: 70px;
+    }
+
 }
 
 
@@ -303,5 +331,7 @@ picture {
         padding-top: 30px;
         padding-bottom: 30px;
     }
+
+
 }
 
